Agrege a cris con caca en el final

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 
     <footer class="main-footer">
         <div class="footer-content">
-            <p>&copy; 2025 RedForU.</p>
+            <p>&copy; 2025 RedForU. cris con caca </p>
             <div class="social-links"> 
                 <a href="https://www.instagram.com/ceemat.usm.sj?igsh=MXhtcnM3N2gxOW4wMQ==" target="blank">Instagram</a> | 
                 <a href="#" target="blank">CEEMAT</a> 
