--- a/client/src/pages/Ramos_Electivos/ALGEBRA/topologia.html
+++ b/client/src/pages/Ramos_Electivos/ALGEBRA/topologia.html
@@ -34,40 +34,64 @@
     <section class="hero-slider2">
         <div class="hero-slide active">
             <h2>Topología</h2>
-            <p>MAT-403 | 8 Créditos SCT-Chile</p>
+            <p>MAT-250 | 6 Créditos SCT (4 UTFSM)</p>
         </div>
     </section>
 
     <div class="electivos-container">
         <section>
-            <h2 class="section-title">Descripción de la Asignatura</h2>
+            <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                Esta asignatura de formación general profundiza en los conceptos, técnicas y herramientas fundamentales de la topología. El curso abarca desde nociones de vecindad abierta, compacidad y continuidad, hasta elementos introductorios de topología algebraica como la homotopía, con el fin de desarrollar habilidades avanzadas de análisis matemático y pensamiento abstracto.
+                Esta asignatura introduce al estudiante en los conceptos fundamentales de la topología general. Se estudian las propiedades de los espacios topológicos, centrándose en nociones de convergencia, continuidad y compacidad. Es una herramienta esencial para el análisis avanzado y la geometría.
             </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
 
         <section>
-            <h2 class="section-title">Ejes Temáticos</h2>
+            <h2 class="section-title">Contenidos Específicos</h2>
             <div class="electivos-listas">
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo">Topología General</h3>
+                    <h3 class="electivos-titulo">Fundamentos Topológicos</h3>
                     <ul class="lista">
-                        <li><strong>Fundamentos:</strong> Espacios topológicos, bases, subbases y subespacios.</li>
-                        <li><strong>Funciones:</strong> Continuidad, funciones abiertas/cerradas y homeomorfismos.</li>
-                        <li><strong>Propiedades:</strong> Conectividad, arco-conectividad y axiomas de separación (Hausdorff, regulares y normales).</li>
-                        <li><strong>Construcciones:</strong> Topología producto, teorema de Tychonoff y topología cociente.</li>
+                        <li><strong>Espacios Topológicos:</strong> Bases, sub-bases, espacios métricos y topología del orden.</li>
+                        <li><strong>Continuidad:</strong> Funciones continuas, homeomorfismos, topología producto y topología cociente.</li>
+                        <li><strong>Conexión:</strong> Espacios conexos, componentes conexas y conexión por caminos.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo">Convergencia y Álgebra</h3>
+                    <h3 class="electivos-titulo">Compacidad y Separación</h3>
                     <ul class="lista">
-                        <li><strong>Estructuras:</strong> Redes, espacios compactos y teoremas de metrización de Urysohn.</li>
-                        <li><strong>Numerabilidad:</strong> Espacios segundo numerables y espacios separables.</li>
-                        <li><strong>Topología Algebraica:</strong> Homotopía, Grupo Fundamental y Teorema de Van-Kampen.</li>
-                        <li><strong>Revestimientos:</strong> Espacios de cubrimiento.</li>
+                        <li><strong>Compacidad:</strong> Espacios compactos, compacidad local y el Teorema de Tychonoff.</li>
+                        <li><strong>Axiomas de Separación:</strong> Espacios de Hausdorff, regulares, normales y el Lema de Urysohn.</li>
+                        <li><strong>Convergencia:</strong> Redes y filtros en espacios topológicos generales.</li>
                     </ul>
+                </div>
+            </div>
+            <div class="section-VerMas" style="margin-top: 50px;">
+                <a href="https://usmcl-my.sharepoint.com/:f:/g/personal/ceemat_sj_usm_cl/IgCiS7VkmfadR4WMn25-GNKnAUKsrqG2SczYQYUufVqj914?e=QGdORT">Ver Programa</a>
+            </div>
+        </section>
+
+        <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
+
+        <section>
+            <h2 class="section-title">Consejos de Ex-participantes</h2>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 20px;">
+                <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
+                    <span style="font-size: 1.5em;">🌀</span>
+                    <h4 style="margin: 10px 0; color: #0056b3;">Abstracción Pura</h4>
+                    <p style="font-size: 0.9em; color: #555;">Prepárate para dejar de pensar en "distancias" y empezar a pensar en "vecindades". La intuición de R es solo el comienzo.</p>
+                </div>
+                <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
+                    <span style="font-size: 1.5em;">📖</span>
+                    <h4 style="margin: 10px 0; color: #0056b3;">El Munkres es la Biblia</h4>
+                    <p style="font-size: 0.9em; color: #555;">Casi todo el curso sigue el libro de James Munkres. Hacer los ejercicios de los primeros capítulos te asegura una buena base.</p>
+                </div>
+                <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
+                    <span style="font-size: 1.5em;">🛠️</span>
+                    <h4 style="margin: 10px 0; color: #0056b3;">Ojo con los Contraejemplos</h4>
+                    <p style="font-size: 0.9em; color: #555;">Muchos teoremas fallan si quitas una hipótesis pequeña. Estudiar contraejemplos clásicos (como la topología del límite inferior) ayuda mucho.</p>
                 </div>
             </div>
         </section>
@@ -75,48 +99,35 @@
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
 
         <section>
-            <h2 class="section-title">Detalles Académicos</h2>
-            <div class="electivos-listas">
-                <div class="electivos-semestre" style="width: 100%;">
-                    <h3 class="electivos-titulo">Bibliografía del Curso</h3>
-                    <ul class="lista">
-                        <li><strong>Texto Guía:</strong> Munkres, J. (1999) <em>Topology</em>. Pearson Education.</li>
-                        <li><strong>Referencia:</strong> Dugundji, J. (1966) <em>Topology</em>. Allyn and Bacon.</li>
-                        <li><strong>Referencia:</strong> Kelley, J. L. (2017) <em>General Topology</em>. Courier Dover.</li>
-                        <li><strong>Referencia:</strong> Lee, J. (2010) <em>Introduction to Topological Manifolds</em>. Springer.</li>
-                    </ul>
+            <h2 class="section-title">Historial de Impartición</h2>
+            <div class="electivos-container" style="max-width: 900px; margin: 0 auto;">
+                <div class="historial-grid" style="display: grid; gap: 15px;">
+                    
+                    <div style="background: #f8fbff; border-left: 5px solid #007bff; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
+                        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+                            <strong style="color: #0056b3; font-size: 1.2em;">2025.1</strong>
+                            <span style="background: #007bff; color: white; padding: 2px 12px; border-radius: 20px; font-size: 0.8em; font-weight: bold;">En curso</span>
+                        </div>
+                        <div style="display: flex; gap: 30px; flex-wrap: wrap;">
+                            <span>👤 <strong>Profesor:</strong> Alexis Adrian Fuentes Pezoa</span>
+                            <span>🎓 <strong>Ayudante:</strong> Por confirmar</span>
+                        </div>
+                    </div>
+        
+                    <div style="display: grid; gap: 10px;">
+                        <div style="background: white; border: 1px solid #eaeaea; padding: 15px; border-radius: 8px; display: flex; flex-direction: column; gap: 8px;">
+                            <strong style="color: #333; border-bottom: 1px solid #eee; padding-bottom: 5px; width: fit-content;">2024.2</strong>
+                            <div style="display: flex; gap: 25px; flex-wrap: wrap; font-size: 0.95em;">
+                                <span><strong>Profesor:</strong> Jose Alejandro Aburto Araneda</span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                <div class="electivos-semestre" style="width: 100%;">
-                    <h3 class="electivos-titulo">Carga y Evaluación</h3>
-                    <ul class="lista">
-                        <li><strong>Dedicación Total:</strong> 215,9 horas cronológicas.</li>
-                        <li><strong>Prerrequisito:</strong> Ingreso al Programa (Aprendizajes previos en MAT-401).</li>
-                        <li><strong>Sistema de Calificación:</strong> Certámenes ($C \geq 60\%$) y Trabajos/Exposiciones ($T \geq 20\%$).</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-
-        <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
-
-        <section style="background-color: #f9f9f9; padding: 30px; border-radius: 8px; border: 1px solid #eee; margin-top: 40px;">
-            <h2 class="section-title">¿Comentarios o inquietudes sobre Topología?</h2>
-            <p class="parrafo-centrado">
-                Este buzón, gestionado por el CEEMAT, busca canalizar los comentarios, consejos e inquietudes de la comunidad para incidir ante las autoridades. Te recordamos actuar bajo un marco de respeto. El registro de nombres es estrictamente confidencial.
-            </p>
-            <div style="text-align: center; margin-top: 20px;">
-                <a href="https://forms.office.com/r/4ELvLJKtfn?origin=lprLink" 
-                   target="_blank" 
-                   rel="noopener noreferrer" 
-                   class="btn-ver-ramo" 
-                   style="padding: 12px 25px; text-decoration: none; display: inline-block;">
-                    Enviar comentario / reporte
-                </a>
             </div>
         </section>
 
         <div class="section-VerMas" style="margin-top: 50px;">
-            <a href="../../lineas.html">Volver a Análisis</a>
+            <a href="../../Lineas de investigacion/Analisis.html">Volver a Análisis</a>
         </div>
     </div>
 </main>
