--- a/client/src/pages/lineas.html
+++ b/client/src/pages/lineas.html
@@ -88,9 +88,11 @@
             </ul>
 
             <ul class="linea-info">
-                <li><strong>Ramos Electivos:</strong> 
-                    <p>Topología.</p>
-                    <p>Geometría Algebraica.</p>
+                <li><strong>Ramos Electivos:</strong>
+                    <ul class="ramos-list">
+                        <li>Topología.</li>
+                        <li>Geometría Algebraica.</li>
+                    </ul>
                 </li>
                 <li><strong>Académicos:</strong> Estefanía Bravo Rubio, Angélica Torres Bustos</li>
             </ul>
@@ -100,6 +102,11 @@
             </p>
         </div>
     </div>
+
+
+
+
+
 
     <div class="acordeon-item">
         <input type="checkbox" id="linea-optimizacion" class="acordeon-toggle" hidden>
@@ -116,8 +123,8 @@
              <ul class="linea-info">
                 <li><strong>Ramos Comunes Relacionados:</strong> 
                     <ul class="ramos-list"> 
-                        <li>MAT-111:.</li>
-                        <li>MAT-111:.</li>
+                        <li>ILI-281: Fundamentos de Investigación de Operaciones (FIO).</li>
+                        <li>MAT-: .</li>
                     </ul>
                 </li>
             </ul>
@@ -136,7 +143,7 @@
             </ul>
 
             <p class="section-VerMas">
-                <a href="#">Ver más detalles </a>
+                <a href="Lineas de investigacion/Opti.html">Ver más detalles </a>
             </p>
         </div>
     </div>
