--- a/client/src/pages/Ramos_Electivos/ALGEBRA/geo_alge.html
+++ b/client/src/pages/Ramos_Electivos/ALGEBRA/geo_alge.html
@@ -34,40 +34,42 @@
     <section class="hero-slider2">
         <div class="hero-slide active">
             <h2>Geometría Algebraica</h2>
-            <p>MAT-427 | 8 Créditos SCT-Chile</p>
+            <p>MAT-358 | 6 Créditos SCT (4 UTFSM)</p>
         </div>
     </section>
 
     <div class="electivos-container">
         <section>
-            <h2 class="section-title">Descripción de la Asignatura</h2>
+            <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                Asignatura de formación especializada en Álgebra y Geometría. En ella se comprenden los fundamentos de la geometría algebraica: nociones de variedad algebraica, funciones regulares, espacio proyectivo, funciones racionales, divisores y cohomología de haces. Se examinan ejemplos concretos como blow-ups e hipersuperficies, ilustrando la teoría en el caso de curvas algebraicas.
+                Esta asignatura introduce el estudio de las variedades algebraicas, objetos definidos como conjuntos de ceros de polinomios. Se establece un puente entre el álgebra conmutativa y la geometría, analizando propiedades de anillos de coordenadas, funciones racionales y morfismos entre variedades.
             </p>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
 
         <section>
-            <h2 class="section-title">Unidades Temáticas</h2>
+            <h2 class="section-title">Contenidos Específicos</h2>
             <div class="electivos-listas">
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo">Fundamentos y Variedades</h3>
+                    <h3 class="electivos-titulo">Variedades y Álgebra</h3>
                     <ul class="lista">
-                        <li><strong>Bases:</strong> Hilbert's Nullstellensatz y Topología de Zariski.</li>
-                        <li><strong>Estructuras:</strong> Prehaces, haces, espacios anillados y variedades afines.</li>
-                        <li><strong>Morfismos:</strong> Funciones regulares, productos de variedades y componentes irreducibles.</li>
+                        <li><strong>Variedades Afines:</strong> Topología de Zariski, ideales y el Teorema de los ceros de Hilbert (Nullstellensatz).</li>
+                        <li><strong>Morfismos:</strong> Aplicaciones regulares, aplicaciones racionales y funciones en variedades.</li>
+                        <li><strong>Variedades Proyectivas:</strong> Espacio proyectivo, coordenadas homogéneas y variedades de Grassmann.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo">Teoría Geométrica y Cohomología</h3>
+                    <h3 class="electivos-titulo">Teoría Avanzada</h3>
                     <ul class="lista">
-                        <li><strong>Geometría Proyectiva:</strong> Incrustación de Segre/Veronese, Grassmannianas y blow-ups.</li>
-                        <li><strong>Análisis Intrínseco:</strong> Funciones racionales, dimensión, espacio tangente y puntos singulares.</li>
-                        <li><strong>Herramientas Avanzadas:</strong> Fibrados vectoriales, divisores, cohomología de haces y dualidad de Serre.</li>
-                        <li><strong>Teorema Fundamental:</strong> Riemann-Roch para curvas algebraicas.</li>
+                        <li><strong>Dimensión:</strong> Grado de trascendencia, dimensión de variedades y puntos singulares.</li>
+                        <li><strong>Curvas Planas:</strong> Teorema de Bezout, multiplicidad de intersección y género.</li>
+                        <li><strong>Sistemas Lineales:</strong> Divisores y el Teorema de Riemann-Roch (introducción).</li>
                     </ul>
                 </div>
+            </div>
+            <div class="section-VerMas" style="margin-top: 50px;">
+                <a href="https://usmcl-my.sharepoint.com/:f:/g/personal/ceemat_sj_usm_cl/IgCiS7VkmfadR4WMn25-GNKnAUKsrqG2SczYQYUufVqj914?e=QGdORT">Ver Programa</a>
             </div>
         </section>
 
@@ -75,47 +77,46 @@
 
         <section>
             <h2 class="section-title">Información Académica</h2>
-            <div class="electivos-listas">
-                <div class="electivos-semestre" style="width: 100%;">
-                    <h3 class="electivos-titulo">Bibliografía Oficial</h3>
-                    <ul class="lista">
-                        <li><strong>Básica:</strong> Shafarevich, I. R. <em>Basic Algebraic Geometry I</em>.</li>
-                        <li><strong>Recomendada:</strong> Hartshorne, R. <em>Algebraic Geometry</em>.</li>
-                        <li><strong>Recomendada:</strong> Harris, J. <em>Algebraic Geometry: A First Course</em>.</li>
-                        <li><strong>Avanzada:</strong> Griffiths & Harris. <em>Principles of Algebraic Geometry</em>.</li>
-                    </ul>
+            <div style="display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-top: 20px;">
+                <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
+                    <span style="font-size: 1.5em;">🍎</span>
+                    <h4 style="margin: 10px 0; color: #0056b3;">Prerrequisitos</h4>
+                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo sólido de Estructuras Algebraicas (Anillos e Ideales) para no perderse en la teoría.</p>
                 </div>
-                <div class="electivos-semestre" style="width: 100%;">
-                    <h3 class="electivos-titulo">Requisitos y Carga</h3>
-                    <ul class="lista">
-                        <li><strong>Prerrequisito:</strong> MAT-402 (Estructuras Algebraicas II / Álgebra Avanzada).</li>
-                        <li><strong>Dedicación:</strong> 240 horas totales (4.5 horas de docencia directa semanal).</li>
-                        <li><strong>Evaluación:</strong> Al menos 2 certámenes (60-80%) y actividades adicionales (20-40%).</li>
-                    </ul>
+                <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
+                    <span style="font-size: 1.5em;">📘</span>
+                    <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
+                    <p style="font-size: 0.9em; color: #555;">Shafarevich y Fulton son los textos recomendados para iniciar sin la complejidad extrema de Hartshorne.</p>
+                </div>
+                <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
+                    <span style="font-size: 1.5em;">📈</span>
+                    <h4 style="margin: 10px 0; color: #0056b3;">Dedicación</h4>
+                    <p style="font-size: 0.9em; color: #555;">Ramo de alta carga teórica. Se estima un estudio personal de al menos 6 horas semanales para asimilar los conceptos.</p>
                 </div>
             </div>
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
 
-        <section style="background-color: #f9f9f9; padding: 30px; border-radius: 8px; border: 1px solid #eee; margin-top: 40px;">
-            <h2 class="section-title">¿Comentarios sobre el ramo?</h2>
-            <p class="parrafo-centrado">
-                Este buzón, gestionado por el CEEMAT, busca canalizar tus comentarios, consejos e inquietudes para incidir ante las autoridades de Ingeniería Civil Matemática. Te recordamos actuar con respeto; el registro de nombres es confidencial.
-            </p>
-            <div style="text-align: center; margin-top: 20px;">
-                <a href="https://forms.office.com/r/4ELvLJKtfn?origin=lprLink" 
-                   target="_blank" 
-                   rel="noopener noreferrer" 
-                   class="btn-ver-ramo" 
-                   style="padding: 12px 25px; text-decoration: none; display: inline-block;">
-                    Enviar comentario / reporte
-                </a>
+        <section>
+            <h2 class="section-title">Historial de Impartición</h2>
+            <div class="electivos-container" style="max-width: 900px; margin: 0 auto;">
+                <div class="historial-grid" style="display: grid; gap: 15px;">
+                    <div style="background: #fff9e6; border-left: 5px solid #ffc107; padding: 20px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.05);">
+                        <div style="display: flex; justify-content: space-between; align-items: center;">
+                            <strong style="color: #856404; font-size: 1.2em;">Sin Registros Recientes</strong>
+                            <span style="background: #ffc107; color: #856404; padding: 2px 12px; border-radius: 20px; font-size: 0.8em; font-weight: bold;">No dictado</span>
+                        </div>
+                        <p style="margin-top: 10px; color: #666; font-size: 0.95em;">
+                            Este ramo no aparece con registros en el historial de electivos de los últimos años. Suele dictarse según interés de los estudiantes y disponibilidad docente.
+                        </p>
+                    </div>
+                </div>
             </div>
         </section>
 
         <div class="section-VerMas" style="margin-top: 50px;">
-            <a href="../../lineas.html">Volver a Álgebra y Geometría</a>
+            <a href="../../Lineas de investigacion/Algebra.html">Volver a Algebra y Geometría</a>
         </div>
     </div>
 </main>
