--- a/client/src/pages/Ramos_Electivos/Sist-Din/Vari-dif.html
+++ b/client/src/pages/Ramos_Electivos/Sist-Din/Vari-dif.html
@@ -52,19 +52,11 @@
             <h2 class="section-title">Contenidos Específicos</h2>
             <div class="electivos-listas">
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo">Variedades y Álgebra</h3>
+                    <h3 class="electivos-titulo">Geometría Diferencial y Cálculo en Variedades</h3>
                     <ul class="lista">
-                        <li><strong>Variedades Afines:</strong> Topología de Zariski, ideales y el Teorema de los ceros de Hilbert (Nullstellensatz).</li>
-                        <li><strong>Morfismos:</strong> Aplicaciones regulares, aplicaciones racionales y funciones en variedades.</li>
-                        <li><strong>Variedades Proyectivas:</strong> Espacio proyectivo, coordenadas homogéneas y variedades de Grassmann.</li>
-                    </ul>
-                </div>
-                <div class="electivos-semestre">
-                    <h3 class="electivos-titulo">Teoría Avanzada</h3>
-                    <ul class="lista">
-                        <li><strong>Dimensión:</strong> Grado de trascendencia, dimensión de variedades y puntos singulares.</li>
-                        <li><strong>Curvas Planas:</strong> Teorema de Bezout, multiplicidad de intersección y género.</li>
-                        <li><strong>Sistemas Lineales:</strong> Divisores y el Teorema de Riemann-Roch (introducción).</li>
+                        <li><strong>Fundamentos de la Estructura Diferenciable:</strong> Establece la base topológica y las definiciones del espacio.</li>
+                        <li><strong>Cálculo en Variedades y Dinámica de Campos:</strong> Campos	vectoriales. Ecuaciones diferenciales y flujos. Derivadas de Lie y corchetes de Lie. Formas diferenciables.</li>
+                        <li><strong>Teoría de Integración, Integrabilidad y Cohomología:</strong> Distribuciones y el teorema de integrabilidad de Frobenius. Integración. Teorema de Stokes, cohomología de Rham.</li>
                     </ul>
                 </div>
             </div>
@@ -81,17 +73,18 @@
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">🍎</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Prerrequisitos</h4>
-                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo sólido de Estructuras Algebraicas (Anillos e Ideales) para no perderse en la teoría.</p>
+                    <p style="font-size: 0.9em; color: #555;">Es indispensable un manejo sobre espacios métricos, espacios topológicos y espacios vectoriales normados.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📘</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Bibliografía</h4>
-                    <p style="font-size: 0.9em; color: #555;">Shafarevich y Fulton son los textos recomendados para iniciar sin la complejidad extrema de Hartshorne.</p>
+                    <p style="font-size: 0.9em; color: #555;">Warner Foundations of differentiable manifolds and Lie groups (Vol.94) como bibliografia basica luego tenemos Kobayashi,	 S.,	 &	 Nomizu,	 K.. Foundations	 of	 differential	
+geometry (Vol.	1,	No.	2) Bredon,	G.	E.	(2013). Topology and	geometry (Vol.	139) como algunas recomendadas.</p>
                 </div>
                 <div style="background: #fff; border: 1px solid #eee; padding: 20px; border-radius: 12px; box-shadow: 0 4px 6px rgba(0,0,0,0.05);">
                     <span style="font-size: 1.5em;">📈</span>
                     <h4 style="margin: 10px 0; color: #0056b3;">Dedicación</h4>
-                    <p style="font-size: 0.9em; color: #555;">Ramo de alta carga teórica. Se estima un estudio personal de al menos 6 horas semanales para asimilar los conceptos.</p>
+                    <p style="font-size: 0.9em; color: #555;">Ramo de alta carga teórica. Se estima un estudio personal de al menos 9 horas semanales para asimilar los conceptos.</p>
                 </div>
             </div>
         </section>
@@ -116,7 +109,7 @@
         </section>
 
         <div class="section-VerMas" style="margin-top: 50px;">
-            <a href="../../Lineas de investigacion/Algebra.html">Volver a Algebra y Geometría</a>
+            <a href="../../Lineas de investigacion/Sist-Din.html">Volver a Sistemas Dinámicos</a>
         </div>
     </div>
 </main>
