--- a/client/src/pages/Ramos_malla/Nolineal-EDP/EDPs.html
+++ b/client/src/pages/Ramos_malla/Nolineal-EDP/EDPs.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ecuaciones Diferenciables Ordinarias | Red For U</title>
+    <title>Ecuaciones Diferenciales Parciales | Red For U</title>
     <link rel="stylesheet" href="../../../assets/styles.css">
     <link rel="stylesheet" href="../../../assets/contenedor.css">
 </head>
@@ -33,8 +33,8 @@
 <main>
     <section class="hero-slider2">
         <div class="hero-slide active">
-            <h2>Ecuaciones Diferenciables Ordinarias</h2>
-            <p>MAT-243 | 6 Créditos SCT (4 UTFSM)</p>
+            <h2>Ecuaciones Diferenciales Parciales</h2>
+            <p>MAT-247 | 6 Créditos SCT (4 UTFSM)</p>
         </div>
     </section>
 
@@ -42,11 +42,11 @@
         <section>
             <h2 class="section-title">Descripción General</h2>
             <p class="parrafo-centrado">
-                En esta asignatura el estudiante comprende los fundamentos de la teoría de ecuaciones diferenciales ordinarias.
-Desarrolla habilidades de análisis cuantitativo y cualitativo de soluciones a nivel básico. El
-estudiante utiliza herramientas de matemática básica, análisis matemático y algebra lineal,
-aprendidas en los cursos anteriores, relacionándolas con los nuevos conceptos que adquiere en
-esta asignatura.
+                Asignatura que introduce la teoría de ecuaciones diferenciales parciales mediante el estudio de
+soluciones de modelos básicos de ecuaciones. Se presentan en particular las ecuaciones de
+Laplace, de calor y de ondas, y sus principales propiedades.
+Se introducen a los espacios de Sobolev y sus aplicaciones en el estudio de la existencia y
+unicidad de soluciones débiles en problemas elípticos y en evolución. 
         </section>
 
         <hr style="margin: 40px 0; border: 0; border-top: 1px solid #ddd;">
@@ -55,22 +55,19 @@ esta asignatura.
             <h2 class="section-title">Contenidos Específicos</h2>
             <div class="electivos-listas">
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo">Fundamentos de Ecuaciones Diferenciales Ordinarias</h3>
+                    <h3 class="electivos-titulo">Teoría Clásica de EDP y Espacios de Sobolev</h3>
                     <ul class="lista">
-                        <li><strong>Existencia y Unicidad:</strong> existencia y unicidad de
-soluciones: El problema de Cauchy. Teoremas de Picard y Peano. Soluciones máximas. 
-</li>
-                        <li><strong>Sistemas y Dependencia Continua:</strong> sistemas y ecuaciones de orden superior.
-Dependencia de las soluciones respecto de las condiciones iniciales y de los coeficientes.</li>
-                        <li><strong>Sistemas Lineales:</strong> sistemas lineales. Matriz fundamental canónica. Ecuaciones
-lineales con coeficientes constantes. Ecuaciones con coeficientes periódicos.</li>
+                        <li><strong>Introducción a las ecuaciones diferenciales parciales:</strong> Ecuación de Laplace, del Calor y de Ondas. Fórmulas de D’Alambert y Kirchhoff </li>
+                        <li><strong>Espacios de Sobolev:</strong> Espacios de Sobolev y otros espacios.</li>
                     </ul>
                 </div>
                 <div class="electivos-semestre">
-                    <h3 class="electivos-titulo"> Dinámica No Lineal y Oscilaciones</h3>
+                    <h3 class="electivos-titulo"> Ecuaciones elípticas de segundo orden y lineales de evolución</h3>
                     <ul class="lista">
-                        <li><strong>Sistemas Planos y Equivalencia topológica:</strong> Sistemas autónomos de 2° orden, sistemas equivalentes, sistemas hiperbólicos y Teorema de Hartman-Grobman.</li>
-                        <li><strong>Estabilidad y Oscilaciones No Lineales:</strong> Puntos críticos y estabilidad en sistemas autónomosde 2° orden, Sistemas exactos.</li>
+                        <li><strong>Ecuaciones elípticas de segundo orden:</strong> soluciones débiles, existencia de soluciones
+débiles, regularidad de soluciones, principios del máximo, desigualdad de Harnack,
+valores propios y funciones propias.</li>
+                        <li><strong>Ecuaciones lineales de evolución:</strong> Ecuaciones parabólicas de segundo orden y hiperbólicas de segundo orden.</li>
                     </ul>
                 </div>
             </div>
